--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,10 @@
               <td>
                 <span><%= provinces[i].capital %></span>
               </td>
+
+              <td>
+                <span><%= provinces[i]._id %></span>
+              </td>
             </tr>
             <% } %>
 		  </table>
